# tropical

./: .gitignore  .gitmodules  .mcp.json  .yamllint.yml  Bananas.cabal  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  Makefile  README.md  STATIC_PARAMS.md  Tropical.cabal  module_library.py  package.json  pyproject.toml  python_example.py  stack.yaml  tsconfig.json
.claude/agents/: art.md  bob.md  karl.md  siv.md  tera.md
.github/workflows/: ci.yml  lint.yml
cmake/: egress.map  egress_exports.txt  tropical.map  tropical_exports.txt
compiler/: CLAUDE.md  adt.test.ts  apply_plan.test.ts  apply_plan.ts  array_wiring.test.ts  array_wiring.ts  bench_compile.ts  bounds.test.ts  bubble.test.ts  bubble_cloud.test.ts  combinators.test.ts  compiler.test.ts  compiler.ts  delay_generic.test.ts  emit_numeric.test.ts  emit_numeric.ts  emit_wasm.test.ts  emit_wasm.ts  envexpdecay.test.ts  expr.test.ts  expr.ts  expr_strict.test.ts  flatten.ts  flatten_wiring.test.ts  interpret.test.ts  interpret.ts  jit_interp_equiv.test.ts  lower_adts.ts  lower_arrays.test.ts  lower_arrays.ts  module.ts  module_library.ts  morphism_registry.ts  nested_flatten_bugs.test.ts  optimizer.test.ts  patch.ts  plan.test.ts  plan.ts  program.test.ts  program.ts  (+28 more)
compiler/__fixtures__/flat_plan/: patch_int_seq_test.json  patch_sequencer_demo.json  stdlib_delay.json  stdlib_ladder.json  stdlib_noise_crush.json  stdlib_phaser.json  (+5 more)
compiler/ir/: elaborator.test.ts  elaborator.ts  nodes.ts
compiler/parse/: adts.test.ts  convert_stdlib.ts  declarations.test.ts  declarations.ts  expressions.test.ts  expressions.ts  lexer.test.ts  lexer.ts  lower.test.ts  lower.ts  markdown.test.ts  markdown.ts  nodes.ts  print.test.ts  print.ts  raise.test.ts  raise.ts  shared.ts  statements.test.ts  statements.ts  stdlib_round_trip.test.ts  uniformity.test.ts
compiler/runtime/: audio.test.ts  audio.ts  audio_smoke.ts  bindings.ts  param.ts  runtime.ts
compiler/test_utils/: audio.ts
design/: TESTING.md  architecture.md  arrays-roadmap.md
dist-newstyle/cache/: config
docs/: phase2-fusion-attempt.md
egress/: __init__.py  _bindings.py  audio.py  demo_patch.yaml  expr.py  graph.py  mcp_server.py  module.py  module_library.py  param.py  tui.py  udp.py  yaml_schema.py
egress/modules/: ad_envelope.yaml  allpass_stage.yaml  bass_drum.yaml  clock.yaml  compressor.yaml  phaser.yaml  phaser16.yaml  poly_blamp.yaml  poly_blep.yaml  vco.yaml  wrap01.yaml
engine/: CLAUDE.md  ControlParam.hpp
engine/c_api/: egress_c.cpp  tropical_c.cpp  tropical_c.h
engine/dac/: TropicalDAC.hpp
engine/expr/: Expr.hpp  ExprEval.hpp  ExprRewrite.cpp  ExprRewrite.hpp  ExprStructural.cpp  ExprStructural.hpp
engine/graph/: GraphTypes.hpp
engine/jit/: OrcJitEngine.cpp  OrcJitEngine.hpp
engine/runtime/: FlatRuntime.cpp  FlatRuntime.hpp  NumericProgramBuilder.hpp  NumericProgramParser.hpp  PlanParser.hpp
engine/tests/: CLAUDE.md  test_module_process.cpp
mcp/: CLAUDE.md  ERRORS.md  errors.test.ts  patch.test.ts  program.test.ts  server.ts  test_patch.ts  wire_dac.test.ts
patches/: 31tet_otonal_seq.json  CLAUDE.md  acid_noise.json  bubble_cloud.json  bubble_drip.json  compressor_harmonics.json  cross_fm_4.json  cross_fm_evolved.json  int_seq_test.json  melancholy_house.json  odd_harmonics.json  sequencer_demo.json
scripts/: eval_program.ts  gen_stdlib.ts  migrate_patches.ts  validate_stdlib.ts
src/: Analyzer.hs  Audio.hs  CLAUDE.md  Expr.hpp  ExprEval.hpp  Expression.hs  Graph.hpp  Interface.hs  Module.hpp  Object.hs  OrcJitEngine.cpp  OrcJitEngine.hpp  Parser.hs  Runtime.hs  Tropical.hs  UI.hs  python_bindings.cpp
src/c_api/: egress_c.cpp  egress_c.h  plan_loader.hpp
src/cdeps/: export.cpp  expr.cpp  expr.h  obj.cpp  obj.h  runtime.cpp  runtime.h  vco.cpp  vco.h
src/dac/: EgressDAC.hpp
src/expr/: Expr.hpp  ExprEval.hpp  ExprRewrite.cpp  ExprStructural.cpp  ExprStructural.hpp
src/graph/: CompositeModule.hpp  Graph.cpp  Graph.hpp  GraphRuntime.hpp  GraphRuntimeMethods.hpp  GraphTypes.hpp  Module.cpp  Module.hpp  ModuleMethods.hpp  ModuleNumericJit.hpp  ModuleNumericJitMethods.hpp  ModuleProgram.hpp  TypeRegistry.hpp
src/jit/: OrcJitEngine.cpp  OrcJitEngine.hpp
src/python/: PythonAudioRuntime.hpp  PythonBindings.cpp  PythonBindingsModuleInit.hpp  PythonDefinitionHelpers.hpp  PythonSignalHelpers.hpp  PythonWrapperTypes.hpp
src/runtime/: ExprCompiler.hpp  FlatRuntime.cpp  FlatRuntime.hpp  NumericProgramBuilder.hpp
stdlib/: ADEnvelope.json  ADSREnvelope.json  AllpassDelay.json  AllpassDelay.trop  BassDrum.json  BitCrusher.json  BitCrusher.trop  BlepSaw.json  BlepSaw.trop  Bubble.json  Bubble.trop  BubbleCloud.json  BubbleCloud.trop  Clock.json  Clock.trop  CombDelay.json  CombDelay.trop  Compressor.json  Cos.json  Cos.trop  CrossFade.json  CrossFade.trop  Delay.json  Delay.trop  Delay1.json  Delay16.json  Delay4410.json  Delay44100.json  Delay512.json  Delay8.json  EnvExpDecay.json  EnvExpDecay.trop  Exp.json  Exp.trop  LadderFilter.json  LadderFilter.trop  Log.json  Log.trop  NoiseLFSR.json  NoiseLFSR.trop  (+35 more)
test/: Test.cpp  benchmark_boxing_boundaries.py  parallel_test.py  test_compressor.py  test_fade.cpp  test_primitives.py  test_udp.py  test_yaml_loader.py
test/manual/: parallel_test.py  testPlot.py  test_reverb.py
test/unit/: test_yaml_loader.py  test_yaml_roundtrip.py
tests/: CLAUDE.md  test_module_process.cpp
tests/golden/: int_seq_test.hash  sequencer_demo.hash
tools/: freeze_flat_plan_fixtures.ts  migrate_program1_to_2.ts
tui/: CLAUDE.md  package.json  tsconfig.json
tui/src/: apply_plan.test.ts  apply_plan.ts  audio.ts  bindings.ts  compiler.ts  expr.ts  flatten.ts  graph.ts  index.tsx  mcp.ts  module.ts  module_library.ts  morphism_registry.ts  optimizer.ts  param.ts  patch.ts  plan.test.ts  runtime.ts  schema.ts  server.ts  term.test.ts  term.ts  test_audio_flat.ts  test_patch.ts  type_check.ts  types.ts
web/: build.ts  build_patches.ts  bundle_stdlib.ts  dev.ts
web/host/: compiler.ts  context.ts  params.ts
web/site/: app.ts  index.html
web/worklet/: processor.ts  runtime.ts
(+4 files in other folders)
