cabal-version:       2.2
name:                Tropical
version:             0.1.0.0
homepage:            https://github.com/willishoke/tropical.git 
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2022 Willis Hoke
category:            Simulation 
build-type:          Simple

executable banana
  other-modules:       Audio, 
                       Expression, 
                       Object,
                       Parser,
                       Runtime 
  hs-source-dirs:      src
  include-dirs:        src/cdeps
  main-is:             Tropical.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -fwarn-incomplete-patterns 
  extra-libraries:     stdc++t
  cxx-sources:         src/cdeps/expr.cpp
  cxx-options:         -std=c++20 -O3
  build-depends:       base >= 4.7,
                       algebraic-graphs,
                       mtl,
                       containers,
                       vector,
                       parsec,
                       text,
                       lens,
                       portaudio,
                       haskeline,
                       unordered-containers >= 0.2,
                       transformers >= 0.5 && < 0.7
