cabal-version:       2.2
name:                Tropical
version:             0.1.0.0
homepage:            https://github.com/willishoke/tropical.git 
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2022 Willis Hoke
category:            Language
build-type:          Simple

executable tropical
  other-modules:    Audio,
                    Interface,
                    Parser,
                    Runtime 
  hs-source-dirs:   src
  include-dirs:     src/cdeps
  main-is:          Tropical.hs
  default-language: Haskell2010
  ghc-options:      -threaded -fwarn-incomplete-patterns 
  extra-libraries:  stdc++
  cxx-sources:      src/cdeps/expr.cpp
                    src/cdeps/obj.cpp
                    src/cdeps/runtime.cpp
                    src/cdeps/export.cpp
  cxx-options:      -std=c++20 -O3
  build-depends:    base >= 4.7,
                    containers,
                    parsec,
                    lens,
                    portaudio,
                    haskeline,
                    unordered-containers >= 0.2,
                    mtl,
                    syb,
                    extra >= 1.7 && < 1.8
